<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e4e4e4"
        android:orientation="vertical"
        tools:elevation="@android:dimen/app_icon_size">

        <TextView
            style="@style/tituloStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlanco"
            android:text="@string/tituloCitas"
            android:textColor="@color/colorAzulRey" />


        <Button
            android:id="@+id/solicitarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/borders"
            android:drawableStart="@android:drawable/ic_menu_add"
            android:paddingBottom="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/botonSolicitar"
            android:textColor="@color/colorBlanco">

        </Button>

        <android.support.v7.widget.CardView
            style="@style/margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tipoCita"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tipo"
                    android:textColor="@color/colorAzulCielo"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fechaCita"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fecha"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/horaCita"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hora"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/nombreMedico"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/medico"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</RelativeLayout>
