<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/imagenSesion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAzulCielo"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:padding="11dp"
                    android:text="@string/titulo"
                    android:textColor="@color/colorBlanco"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="10dp"
                    android:text="@string/subtitulo"
                    android:textColor="@color/colorBlanco"
                    android:textSize="15dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/user"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:textColor="@android:color/darker_gray"

            android:inputType="number"
            android:text="@string/user" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:textColor="@android:color/darker_gray"
            android:inputType="number"
            android:text="@string/contraseña" />

        <Button
            android:layout_width="306dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAzulRey"
            android:textColor="@color/colorBlanco"
            android:textStyle="bold"
            android:text="@string/boton" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="164dp"
        android:background=""
        android:text="@string/app_name"
        android:textColor="@color/colorBlanco"
        android:textSize="25dp"
        android:textStyle="bold" />

</RelativeLayout>