<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/ajustarAlto"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/ajustarAlto"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/ajustarAlto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tituloStyle"
                        android:text="Bienvenido"
                        android:textColor="@color/colorAzulRey" />

                    <TextView
                        android:id="@+id/nombrePersona"
                        style="@style/subtituloStyle"
                        android:text="Nombre de usuario"
                        android:textColor="@color/colorAzulRey" />

                </LinearLayout>

                <Button
                    android:id="@+id/cerrarSesión"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAzulRey"
                    android:layout_gravity="center"
                    android:layout_marginLeft="60dp"
                    android:text="Cerrar Sesión" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/enlace2" />

                <Button
                    android:id="@+id/solicitarCita"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:text="@string/boton2" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/cajaTextoVertical"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp">

                <TextView
                    style="@style/cajaTextoVertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/enlace1" />

                <Button
                    android:id="@+id/verCita"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:text="@string/boton1" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAzulCielo"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/frase"
            android:textColor="@color/colorBlanco"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/photo_welcome" />


    </LinearLayout>

</RelativeLayout>